# printechs_lc

./: README.md  license.txt  pyproject.toml
docs/: letter_of_credit_user_manual.docx  letter_of_credit_user_manual_updated.docx
printechs_lc/: hooks.py  install.py  modules.txt  patches.txt  tasks.py  validations.py
printechs_lc/api/: account_tree.py  permission.py
printechs_lc/overrides/: purchase_invoice.py  purchase_receipt.py
printechs_lc/patches/v1_0/: fix_workspace_route.py  setup_workspace.py
printechs_lc/printechs_lc/: accounting.py
printechs_lc/printechs_lc/doctype/lc_amendment/: lc_amendment.json  lc_amendment.py
printechs_lc/printechs_lc/doctype/lc_charge/: lc_charge.json  lc_charge.py
printechs_lc/printechs_lc/doctype/lc_company_default/: lc_company_default.json  lc_company_default.py
printechs_lc/printechs_lc/doctype/lc_document/: lc_document.json  lc_document.py
printechs_lc/printechs_lc/doctype/lc_settings/: lc_settings.json  lc_settings.py
printechs_lc/printechs_lc/doctype/lc_shipment/: lc_shipment.json  lc_shipment.py
printechs_lc/printechs_lc/doctype/lc_voucher_link/: lc_voucher_link.json  lc_voucher_link.py
printechs_lc/printechs_lc/doctype/letter_of_credit/: letter_of_credit.json  letter_of_credit.py
printechs_lc/printechs_lc/report/lc_expiry/: lc_expiry.js  lc_expiry.json  (+1 more)
printechs_lc/public/js/: account_tree_lc.js  letter_of_credit.js  letter_of_credit_list.js  purchase_order_lc.js
printechs_lc/setup/: custom_fields.py  print_formats.py  property_setters.py  workspace.py
printechs_lc/utils/: utilization.py
(+7 files in other folders)
