[project]
name = "printechs_lc"
authors = [
    { name = "Printechs", email = "sakeer@printechs.com" }
]
description = "Letter of Credit management for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["E501", "F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
